🐞 fix: Contrast ratio

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,6 @@
 :root {
 	--default-font-family: 'Lato', sans-serif;
-	--default-font-color: rgb(222, 207, 253);
+	--default-font-color: rgb(180 161 216);
 	--default-font-color2: hsl(259.57, 70%, 90.2%, 0.65);
 	--default-font-color3: hsl(260, 24%, 66%);
 
